--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# \u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u63a5\u7d9a\u8a2d\u5b9a
+# \uff01\uff01\uff01\uff01\u25cb\u25cb\u306b\u306fDB\u306e\u30c6\u30fc\u30d6\u30eb\u540d\u3092\u5165\u308c\u308b\uff01\uff01\uff01\uff01
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/training_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo
+spring.datasource.username=root
+spring.datasource.password=
 
+# MyBatis\u306e\u8a2d\u5b9a
+# src/main/resouces/mybatis/*\u3053\u306e\u9593\u306b\u30d5\u30a9\u30eb\u30c0\u304c\u4f55\u500b\u3042\u3063\u3066\u3082\u3044\u3044*/\u3007\u3007.xml
+mybatis.mapper-locations=classpath*:/mybatis/**/*.xml
+
+# \u30b9\u30cd\u30fc\u30af\u30b1\u30fc\u30b9\u2190\u2192\u30ad\u30e3\u30e1\u30eb\u30b1\u30fc\u30b9\u306e\u81ea\u52d5\u5909\u63db
+mybatis.configuration.map-underscore-to-camel-case=true
+
+# SQL\u306e\u78ba\u8a8d\uff08\u30ed\u30b0\u306b\u51fa\u529b\u3055\u308c\u308b\uff09
+logging.level.com.example.app.mapper.*=DEBUG
+
+mybatis.type-aliases-package=com.example.app.domain
