--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,16 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:3306/training_db?useUnicode=true&ch
 spring.datasource.username=root
 spring.datasource.password=
 
-# MyBatis \u306e\u8a2d\u5b9a
+# MyBatis\u306e\u8a2d\u5b9a
+# src/main/resouces/mybatis/*\u3053\u306e\u9593\u306b\u30d5\u30a9\u30eb\u30c0\u304c\u4f55\u500b\u3042\u3063\u3066\u3082\u3044\u3044*/\u3007\u3007.xml
 mybatis.mapper-locations=classpath*:/mybatis/**/*.xml
+
+# \u30b9\u30cd\u30fc\u30af\u30b1\u30fc\u30b9\u2190\u2192\u30ad\u30e3\u30e1\u30eb\u30b1\u30fc\u30b9\u306e\u81ea\u52d5\u5909\u63db
 mybatis.configuration.map-underscore-to-camel-case=true
+
+# SQL\u306e\u78ba\u8a8d\uff08\u30ed\u30b0\u306b\u51fa\u529b\u3055\u308c\u308b\uff09
+logging.level.com.example.app.mapper.*=DEBUG
+
 mybatis.type-aliases-package=com.example.app.domain
 
+server.servlet.session.tracking-modes=cookie
