--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 # \u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u63a5\u7d9a\u8a2d\u5b9a
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/training_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Tokyo
 spring.datasource.username=root
-spring.datasource.password=
+# \u516c\u958b\u30b5\u30fc\u30d0\u30fc
+spring.datasource.password=Mypass#9999
+# \u30ed\u30fc\u30ab\u30eb
+# spring.datasource.password=
 
 # MyBatis\u306e\u8a2d\u5b9a
 # src/main/resouces/mybatis/*\u3053\u306e\u9593\u306b\u30d5\u30a9\u30eb\u30c0\u304c\u4f55\u500b\u3042\u3063\u3066\u3082\u3044\u3044*/\u3007\u3007.xml
